# ir-project-2026

./: .dockerignore  .env.example  .gitignore  Information_Retrieval_System_Project_2026.md  Makefile  README.md  SOLO_DEVELOPER_GUIDE.md  TEAM_DOCUMENTATION.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  start_all.ps1  tmp_indexing_err.txt  tmp_indexing_out.txt
data/: build_docker_phase10.log.err
docs/: CLUSTERING.md  DOCKER.md  PHASE_0.md  PHASE_1.md  PHASE_10.md  PHASE_2.md  PHASE_3.md  PHASE_3_RESUME.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md  architecture.md  dataset_choice.md  progress.md
evaluation/queries/: nq_queries.txt
evaluation/reports/: clustering_comparison.csv  clustering_comparison.md  summary.csv  summary.md
reports/: report_ar.md  report_en.md
scripts/: benchmark_faiss.py  build_clusters.py  build_dense_2.py  build_dense_indexes.py  build_doc_db.py  build_docker_all.py  build_indexes.py  check_build_progress.py  check_dense_2_status.py  check_gateway_build.py  download_second_model.py  download_symspell_dict.py  download_torch_curl.py  download_torch_gpu.py  ingest_dataset_a.py  ingest_dataset_b.py  install_torch_gpu.py  launch_backend_4_build.py  launch_dense_2.py  launch_download.py  launch_download_curl.py  launch_gateway_build.py  launch_refinement.py  prep_eval_queries.py  rebuild_faiss.py  run_eval_clustering.py  run_evaluation.py  seed_user_logs.py  smoke_dense.py  smoke_hybrid.py  smoke_refine.py  smoke_search.py  tokenize_corpus.py  verify_gpu_path.py
scripts/dev/: cluster_smoke.py  download_tinyllama.py  download_tinyllama_gguf.py  launch_all.py  launch_gateway.py  launch_indexing.py  launch_preprocessing.py  launch_rag.py  launch_refinement.py  (+4 more)
services/: __init__.py  backend.Dockerfile
shared/: __init__.py
tests/: __init__.py
(+116 files in other folders)
